# rust-docs-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  install.sh  justfile  rust-toolchain.toml
.claude/commands/: test_mcp.md  update_mcp_tools_list.md
.github/workflows/: claude-code-review.yml  claude.yml  rust.yml
cargo-modules/: Cargo.toml
cargo-modules-lib/src/: graph.rs  lib.rs  options.rs
cargo-modules/src/: analyzer.rs  item.rs  lib.rs  options.rs  tree.rs
cargo-modules/src/colors/: mod.rs
cargo-modules/src/graph/: builder.rs  ext.rs  mod.rs
cargo-modules/src/item/: attr.rs  visibility.rs
docs/: CONTRIBUTING.md  DOCKER.md  INSTALLATION.md
homebrew/: rust-docs-mcp.rb
rust-docs-mcp/: Cargo.toml
rust-docs-mcp/src/: doctor.rs  health.rs  health_tests.rs  lib.rs  main.rs  metrics.rs  metrics_tests.rs  rustdoc.rs  service.rs  service_metrics_tests.rs  update.rs  util.rs
rust-docs-mcp/src/analysis/: mod.rs  outputs.rs  tools.rs
rust-docs-mcp/src/cache/: DESIGN.md  constants.rs  docgen.rs  downloader.rs  member_utils.rs  mod.rs  outputs.rs  service.rs  source.rs  storage.rs  task_formatter.rs  task_manager.rs  tools.rs  transaction.rs  types.rs  utils.rs  workspace.rs
rust-docs-mcp/src/docs/: mod.rs  outputs.rs  query.rs  tools.rs
rust-docs-mcp/src/search/: config.rs  fuzzy.rs  indexer.rs  mod.rs  outputs.rs  tools.rs
rust-docs-mcp/tests/: integration_tests.rs
scoop/: rust-docs-mcp.json
src/: main.rs  service.rs
src/cache/: mod.rs  service.rs  storage.rs
src/docs/: query.rs
