[package]
name = "mcp-rust-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "macros",
    "transport-io",
] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8" # Upgrade this once rmcp upgrades to schemars 0.9
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
rustdoc-types = { version = "0.46.1", features = ["rustc-hash"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
flate2 = "1.0"
tar = "0.4"
semver = "1.0"
dirs = "6.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
