[package]
authors = ["Vincent Esche <regexident@gmail.com>", "Hmvp <github@hmvp.nl>", "Michael Assaf <michael@snowmead.com>"]
categories = ["development-tools", "rust-patterns"]
description = "A library for analyzing a Rust crate's module structure and dependencies (fork with rust-analyzer 0.0.289 support)."
documentation = "https://docs.rs/rust-analyzer-modules"
homepage = "https://github.com/snowmead/rust-docs-mcp"
keywords = ["module", "analysis", "structure", "dependencies", "tree"]
license = "MPL-2.0"
edition = "2024"
name = "rust-analyzer-modules"
readme = "README.md"
repository = "https://github.com/snowmead/rust-docs-mcp"
rust-version = "1.86.0"
version = "0.1.0"

[dependencies]

# required by lib
bitvec = "1.0"
json = "0.12.4"
petgraph = "0.8.0"
anyhow = "1.0.82"
yansi = "1.0.1"
indoc = "2.0.5"
clap = { version = "4.5.7", features = ["derive"] }
dunce = "1.0.4"
sugar_path = "1.2.0"
tracing = { version = "0.1.41", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

ra_ap_base_db = "=0.0.289"
ra_ap_cfg = "=0.0.289"
ra_ap_hir = "=0.0.289"
ra_ap_hir_def = "=0.0.289"
ra_ap_hir_ty = "=0.0.289"
ra_ap_ide = "=0.0.289"
ra_ap_ide_db = "=0.0.289"
ra_ap_load-cargo = "=0.0.289"
ra_ap_paths = "=0.0.289"
ra_ap_proc_macro_api = "=0.0.289"
ra_ap_project_model = "=0.0.289"
ra_ap_syntax = "=0.0.289"
ra_ap_text_edit = "=0.0.241"
ra_ap_vfs = "=0.0.289"

# minimal versions
wyz = "0.6.1"
pulldown-cmark = "0.13.0"
getopts = "0.2.21"
rust-analyzer-salsa = "0.17.0-pre.6"        # resolving rust-analyzer = "=0.0.189"
rust-analyzer-salsa-macros = "0.17.0-pre.6" # resolving rust-analyzer = "=0.0.189"
libc = "0.2.155"

# security fixes
memoffset = "0.9.1"    #230
thread_local = "1.1.8" #231
url = "2.5.4"          # RUSTSEC-2024-0421

# required by tests
[dev-dependencies]
assert_cmd = "2.0.14"
shellwords = "1.1"
insta = "1.38.0"
bitflags = "2.5.0"

# Profiles moved to workspace Cargo.toml