[package]
name = "rust-docs-mcp"
version = "0.1.0"
edition = "2024"
authors = ["Michael Assaf <michael@snowmead.com>"]
description = "MCP server providing comprehensive Rust crate analysis: documentation search, source code access, dependency trees, and module structure visualization with multi-source caching"
license = "MIT"
documentation = "https://docs.rs/rust-docs-mcp"
homepage = "https://github.com/snowmead/rust-docs-mcp"
repository = "https://github.com/snowmead/rust-docs-mcp"
readme = "../README.md"
keywords = ["mcp", "rust", "documentation", "rustdoc", "cache"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
cargo-modules = { path = "../cargo-modules" }
ra_ap_ide = "=0.0.285"

rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "macros",
    "transport-io",
] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
dirs = "6.0"
flate2 = "1.0"
futures = "0.3"
git2 = "0.20"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustdoc-types = { version = "0.53.0", features = ["rustc-hash"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
tar = "0.4"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tempfile = "3.8"

[dev-dependencies]
