[package]
name = "rust-docs-mcp"
version = "0.1.1"
edition = "2024"
authors = ["Michael Assaf <michael@snowmead.com>"]
description = "MCP server providing comprehensive Rust crate analysis: documentation search, source code access, dependency trees, and module structure visualization with multi-source caching"
license = "MIT"
documentation = "https://docs.rs/rust-docs-mcp"
homepage = "https://github.com/snowmead/rust-docs-mcp"
repository = "https://github.com/snowmead/rust-docs-mcp"
readme = "../README.md"
keywords = ["mcp", "rust", "documentation", "rustdoc", "cache"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
rust-analyzer-modules = { version = "0.1", path = "../cargo-modules" }
ra_ap_ide = "=0.0.289"

rmcp = { version = "0.7.0", features = ["server", "macros", "transport-io"] }
rmcp-macros = "0.7.0"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
dirs = "6.0"
flate2 = "1.0"
futures = "0.3"
git2 = "0.20"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustdoc-types = { version = "0.53.0", features = ["rustc-hash"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
tar = "0.4"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
    "process",
    "time",
] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tempfile = "3.8"
tantivy = "0.24.1"
fs4 = "0.13.1"
uuid = { version = "1.0", features = ["v4"] }
zeroize = "1.8.1"

[dev-dependencies]
